@@ -1,39 +1,0 @@
-// Swarm library. Copyright (C) 1996-1999 Santa Fe Institute.
-// This library is distributed without any warranty; without even the
-// implied warranty of merchantability or fitness for a particular purpose.
-// See file LICENSE for details and terms of copying.
-
-#import <tkobjc/Graph.h>
-#import <tkobjc/Button.h>
-#import <tkobjc/ClassDisplayHideButton.h>
-#import <tkobjc/SimpleProbeDisplayHideButton.h>
-#import <tkobjc/SuperButton.h>
-#import <tkobjc/WindowGeometryRecord.h>
-#import <tkobjc/ArchivedGeometryWidget.h>
-#import <tkobjc/ButtonPanel.h>
-#import <tkobjc/Entry.h>
-#import <tkobjc/MessageProbeEntry.h>
-#import <tkobjc/VarProbeEntry.h>
-#import <tkobjc/Form.h>
-#import <tkobjc/Frame.h>
-#import <tkobjc/Histogram.h>
-#import <tkobjc/Label.h>
-#import <tkobjc/Raster.h>
-#import <tkobjc/TkExtra.h>
-#import <tkobjc/Widget.h>
-#import <tkobjc/Colormap.h>
-#import <tkobjc/Pixmap.h>
-#import <tkobjc/ZoomRaster.h>
-#import <tkobjc/Canvas.h>
-#import <tkobjc/ProbeCanvas.h>
-#import <tkobjc/CanvasItem.h>
-#import <tkobjc/CompositeItem.h>
-#import <tkobjc/Circle.h>
-#import <tkobjc/Line.h>
-#import <tkobjc/Rectangle.h>
-#import <tkobjc/TextItem.h>
-#import <tkobjc/NodeItem.h>
-#import <tkobjc/RectangleNodeItem.h>
-#import <tkobjc/OvalNodeItem.h>
-#import <tkobjc/LinkItem.h>
-#import <tkobjc/global.h>
